# croovy

./: .gitignore  README.md  pyproject.toml
backend/: pyproject.toml
database/: pyproject.toml
database/src/: crawler.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.js
frontend/src/components/: SunIcon.vue
frontend/src/views/: SearchView.vue
src/backend/: app.py
src/frontend/: README.md
src/frontend/src/components/: MoonIcon.vue
src/frontend/src/router/: index.js
src/frontend/src/views/: HomeView.vue
