[tool.poetry]
name = "croovy-backend"
version = "0.0.1"
description = "A search engine respects your privacy."
authors = ["Dinçer Tekin <dincertekin@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
redis = "^5.2.1"
flask = "^3.1.0"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
